LU-6059 llite: unlock inode size in ll_lov_setstripe_ea_info()

In ll_lov_setstripe_ea_info() release the inode size lock on all
appropriate exit paths.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Iba3bd560db0c7a718721d40da447126405ab0858
Reviewed-on: http://review.whamcloud.com/13167
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>